<resources>
    <string name="app_name">Serving Size Calculator</string>
    <string name="pot_name_enter">Pot Name:</string>
    <string name="Pot_Weight_enter">Pot Weight (g):</string>
    <string name="add_pot">ADD POT</string>
    <string name="pot_name">Pot Name</string>
    <string name="pot_weight_g">Pot Weight (g)</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="pot">Pot</string>
    <string name="weight_empty_g">Weight Empty (g)</string>
    <string name="weight_with_food_g">Weight With Food (g)</string>
    <string name="weight_of_food_g">Weight of Food (g)</string>
    <string name="servings"># Servings</string>
    <string name="serving_weight_g">Serving Weight (g)</string>
    <string name="back">BACK</string>
    <string name="default_weight">default weight</string>
    <string name="default_name">default name</string>
    <string name="_0">0</string>
    <string name="enter_weight_g">Enter Weight (g)</string>
    <string name="enter_of_servings">Enter # of Servings</string>
    <string name="remove">Remove</string>
    <string name="select_a_pot_to_remove">Select A Pot To Remove</string>
    <string name="are_you_sure_you_want_to_remove_this_pot">Are You Sure You Want To Remove This Pot?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="weight_100000000g"><![CDATA[Weight < 100000000g]]></string>
    <string name="supporting_optional_features_1_4">Supporting Optional Features 1-4!</string>
</resources>
