<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddingNewPot">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/pot_name_enter"
        app:layout_constraintEnd_toStartOf="@+id/UserEnterName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="16dp"
        android:text="@string/Pot_Weight_enter"
        app:layout_constraintBottom_toBottomOf="@+id/UserEnterWeight"
        app:layout_constraintEnd_toStartOf="@+id/UserEnterWeight"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/UserEnterName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="70dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/pot_name"
        android:inputType="textPersonName"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/UserEnterWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/UserEnterWeight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="429dp"
        android:layout_marginEnd="70dp"
        android:ems="10"
        android:hint="@string/weight_100000000g"
        android:inputType="number"
        android:maxLength="18"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/UserEnterName" />

    <Button
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/ok"
        app:layout_constraintStart_toStartOf="@+id/UserEnterWeight"
        app:layout_constraintTop_toBottomOf="@+id/UserEnterWeight" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="34dp"
        android:layout_marginTop="10dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserEnterWeight" />
</android.support.constraint.ConstraintLayout>