<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Conformation"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/yes_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="76dp"
        android:text="@string/yes"
        app:layout_constraintBaseline_toBaselineOf="@+id/no_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/no_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="35dp"
        android:text="@string/no"
        app:layout_constraintStart_toStartOf="@+id/check_message"
        app:layout_constraintTop_toBottomOf="@+id/check_message" />

    <TextView
        android:id="@+id/check_message"
        android:layout_width="226dp"
        android:layout_height="67dp"
        android:layout_marginTop="64dp"
        android:text="@string/are_you_sure_you_want_to_remove_this_pot"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>